syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "DeviceStatusChangeStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/cms/ResourceStatusRecord.proto";

message DeviceStatusChange {

  vire.utility.BasePayload _base  = 1; // Base class

  vire.cms.ResourceStatusRecord status = 100; // Resource status record

}